objects/ProductPerformance__c.object
<CustomObject>
    <fields>
        <fullName>PrimaryBenchmarkYTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkYTD__c</formula>
        <label>Primary Benchmark YTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkYTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkYTD__c</formula>
        <label>Primary Benchmark YTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkYTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkYTD__c</formula>
        <label>Primary Benchmark YTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkYTD__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.YTD__c</formula>
        <label>Primary Benchmark YTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark__c</fullName>
        <description>Name of the Primary Benchmark value</description>
        <label>Primary Benchmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorBusinessDate__c</fullName>
        <label>Prior Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorDate__c</fullName>
        <label>Prior Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorMonthEndBusinessDate__c</fullName>
        <label>Prior Month End Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorMonthEndDate__c</fullName>
        <label>Prior Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorMonthEndProdPerfException__c</fullName>
        <formula>IF(NOT(ISBLANK( PriorMonthEndProductPerformance__c ))|| ( PriorMonthEndBusinessDate__c &lt;= Product__r.InceptionDate__c) || (PriorMonthEndBusinessDate__c&lt; DATE(2006,1,1)),FALSE,TRUE)</formula>
        <label>Prior Month End Prod Perf Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorMonthEndProdPerfExtId__c</fullName>
        <externalId>true</externalId>
        <label>Prior Month End Prod Perf ExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorMonthEndProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Month End Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Product Performance (Prior Month End Product Performance)</relationshipLabel>
        <relationshipName>PriorMonthEndProductPerformance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorPriorMonthEndBusinessDate__c</fullName>
        <label>Prior Prior Month End Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorPriorMonthEndDate__c</fullName>
        <label>Prior Prior Month End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorProdPerfException__c</fullName>
        <formula>IF(NOT(ISBLANK( PriorProductPerformance__c )) || ( PriorBusinessDate__c &lt;= Product__r.InceptionDate__c) || (PriorBusinessDate__c &lt; DATE(2006,1,1)),FALSE,TRUE)</formula>
        <label>Prior Prod Perf Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorProductPerfExtId__c</fullName>
        <description>System field used by Informatica to do faster joins</description>
        <externalId>true</externalId>
        <label>Prior Product Perf ExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Product Performance</relationshipLabel>
        <relationshipName>ProductPerformance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorQuarterEndBusinessDate__c</fullName>
        <label>Prior Quarter End Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorQuarterEndDate__c</fullName>
        <label>Prior Quarter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorQuarterEndProdPerfException__c</fullName>
        <formula>IF(NOT(ISBLANK( PriorQuarterEndProductPerformance__c ))|| ( PriorQuarterEndBusinessDate__c &lt;= Product__r.InceptionDate__c) || (PriorQuarterEndBusinessDate__c &lt; DATE(2006,1,1)),FALSE,TRUE)</formula>
        <label>Prior Quarter End Prod Perf Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorQuarterEndProdPerfExtId__c</fullName>
        <externalId>true</externalId>
        <label>Prior Quarter End Prod Perf ExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorQuarterEndProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Quarter End Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Product Performance (Prior Quarter End Product Performance)</relationshipLabel>
        <relationshipName>PriorQuarterEndProductPerformance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PriorYearEndBusinessDate__c</fullName>
        <label>Prior Year End Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorYearEndDate__c</fullName>
        <label>Prior Year End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorYearEndProdPerfException__c</fullName>
        <formula>IF(NOT(ISBLANK( PriorYearEndProductPerformance__c )) || ( PriorYearEndBusinessDate__c &lt;= Product__r.InceptionDate__c) || (PriorYearEndBusinessDate__c &lt; DATE(2006,1,1)),FALSE,TRUE)</formula>
        <label>Prior Year End Prod Perf Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriorYearEndProdPerfExtId__c</fullName>
        <externalId>true</externalId>
        <label>Prior Year End Prod Perf ExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorYearEndProductPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prior Year End Product Performance</label>
        <referenceTo>ProductPerformance__c</referenceTo>
        <relationshipLabel>Product Performance (Prior Year End Product Performance)</relationshipLabel>
        <relationshipName>PriorYearEndProductPerformance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductNameandDetails__c</fullName>
        <formula>Product__r.Name &amp; IF (NOT(ISBLANK(Product__r.TradingSymbol__c)), " - " &amp; Product__r.TradingSymbol__c, "") &amp; IF (NOT(ISBLANK(Product__r.ShareClassName__c)), " - " &amp; Product__r.ShareClassName__c, "")</formula>
        <label>Product Name and Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRecordType__c</fullName>
        <formula>Product__r.RecordType.Name</formula>
        <label>Product Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Performance</relationshipLabel>
        <relationshipName>ProductPerformance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishExternally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Externally?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishInternally__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish Internally?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QuarterEndDate__c</fullName>
        <description>Quarter End Date associated with the row.  Used to simplify querying.</description>
        <label>Quarter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEC30DaySubsidizedYieldME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SEC30DaySubsidizedYield__c</formula>
        <label>SEC 30-Day Subsidized Yield ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DaySubsidizedYieldQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SEC30DaySubsidizedYield__c</formula>
        <label>SEC 30-Day Subsidized Yield QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DaySubsidizedYieldYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SEC30DaySubsidizedYield__c</formula>
        <label>SEC 30-Day Subsidized Yield YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DaySubsidizedYield__c</fullName>
        <label>SEC 30-Day Subsidized Yield</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DayUnsubsidizedYieldME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SEC30DayUnsubsidizedYield__c</formula>
        <label>SEC 30-Day UnSubsidized Yield ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DayUnsubsidizedYieldQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SEC30DayUnsubsidizedYield__c</formula>
        <label>SEC 30-Day UnSubsidized Yield QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DayUnsubsidizedYieldYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SEC30DayUnsubsidizedYield__c</formula>
        <label>SEC 30-Day UnSubsidized Yield YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEC30DayUnsubsidizedYield__c</fullName>
        <label>SEC 30-Day Unsubsidized Yield</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SECTaxEquivalentYieldME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SECTaxEquivalentYield__c</formula>
        <label>SEC Tax-Equivalent Yield ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SECTaxEquivalentYieldQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SECTaxEquivalentYield__c</formula>
        <label>SEC Tax-Equivalent Yield QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SECTaxEquivalentYieldYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SECTaxEquivalentYield__c</formula>
        <label>SEC Tax-Equivalent Yield YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SECTaxEquivalentYield__c</fullName>
        <label>SEC Tax-Equivalent Yield</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark10YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark10Year__c</formula>
        <label>Secondary Benchmark 10 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark10YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark10Year__c</formula>
        <label>Secondary Benchmark 10 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark10YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark10Year__c</formula>
        <label>Secondary Benchmark 10 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark10Year__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X10Year__c</formula>
        <label>Secondary Benchmark 10 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayGrossME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark1DayGross__c</formula>
        <label>Secondary Benchmark 1 Day Gross ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayGrossQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark1DayGross__c</formula>
        <label>Secondary Benchmark 1 Day Gross QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayGrossYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark1DayGross__c</formula>
        <label>Secondary Benchmark 1 Day Gross YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayGross__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X1DayGross__c</formula>
        <label>Secondary Benchmark 1 Day Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayNetME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark1DayNet__c</formula>
        <label>Secondary Benchmark 1 Day Net ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayNetQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark1DayNet__c</formula>
        <label>Secondary Benchmark 1 Day Net QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayNetYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark1DayNet__c</formula>
        <label>Secondary Benchmark 1 Day Net YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayNet__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X1DayNet__c</formula>
        <label>Secondary Benchmark 1 Day Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayPriceChange__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X1DayPriceChange__c</formula>
        <label>Secondary Benchmark 1 Day Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayPriceChgME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark1DayPriceChange__c</formula>
        <label>Secondary Benchmark 1 Day Price Chg ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayPriceChgQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark1DayPriceChange__c</formula>
        <label>Secondary Benchmark 1 Day Price Chg QE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1DayPriceChgYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark1DayPriceChange__c</formula>
        <label>Secondary Benchmark 1 Day Price Chg YE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1MonthME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark1Month__c</formula>
        <label>Secondary Benchmark 1 Month ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1MonthQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark1Month__c</formula>
        <label>Secondary Benchmark 1 Month QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1MonthYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark1Month__c</formula>
        <label>Secondary Benchmark 1 Month YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1Month__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X1Month__c</formula>
        <label>Secondary Benchmark 1 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark1Year__c</formula>
        <label>Secondary Benchmark 1 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark1Year__c</formula>
        <label>Secondary Benchmark 1 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark1Year__c</formula>
        <label>Secondary Benchmark 1 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark1Year__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X1Year__c</formula>
        <label>Secondary Benchmark 1 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3MonthME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark3Month__c</formula>
        <label>Secondary Benchmark 3 Month ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3MonthQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark3Month__c</formula>
        <label>Secondary Benchmark 3 Month QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3MonthYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark3Month__c</formula>
        <label>Secondary Benchmark 3 Month YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3Month__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X3Month__c</formula>
        <label>Secondary Benchmark 3 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark3Year__c</formula>
        <label>Secondary Benchmark 3 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark3Year__c</formula>
        <label>Secondary Benchmark 3 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark3Year__c</formula>
        <label>Secondary Benchmark 3 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark3Year__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.X3Year__c</formula>
        <label>Secondary Benchmark 3 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmark__c</formula>
        <label>Secondary Benchmark ME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkMTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkMTD__c</formula>
        <label>Secondary Benchmark MTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkMTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkMTD__c</formula>
        <label>Secondary Benchmark MTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkMTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkMTD__c</formula>
        <label>Secondary Benchmark MTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkMTD__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.MTD__c</formula>
        <label>Secondary Benchmark MTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Benchmark Performance</label>
        <referenceTo>BenchmarkPerformance__c</referenceTo>
        <relationshipLabel>Product Performance (Secondary Benchmark)</relationshipLabel>
        <relationshipName>ProductPerformanceSecondaryBenchmark</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkPriceME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkPrice__c</formula>
        <label>Secondary Benchmark Price ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkPriceQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkPrice__c</formula>
        <label>Secondary Benchmark Price QE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkPriceYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkPrice__c</formula>
        <label>Secondary Benchmark Price YE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkPrice__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.Price__c</formula>
        <label>Secondary Benchmark Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmark__c</formula>
        <label>Secondary Benchmark QE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkQTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkQTD__c</formula>
        <label>Secondary Benchmark QTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkQTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkQTD__c</formula>
        <label>Secondary Benchmark QTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkQTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkQTD__c</formula>
        <label>Secondary Benchmark QTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkQTD__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.QTD__c</formula>
        <label>Secondary Benchmark QTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkRichTextName__c</fullName>
        <label>Secondary Benchmark Rich Text Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkSinceInceptionME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkSinceInception__c</formula>
        <label>Secondary Benchmark Since Inception ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkSinceInceptionQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkSinceInception__c</formula>
        <label>Secondary Benchmark Since Inception QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkSinceInceptionYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkSinceInception__c</formula>
        <label>Secondary Benchmark Since Inception YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkSinceInception__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.SinceInception__c</formula>
        <label>Secondary Benchmark Since Inception</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalGrossME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkTotalGross__c</formula>
        <label>Secondary Benchmark Total Gross ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalGrossQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkTotalGross__c</formula>
        <label>Secondary Benchmark Total Gross QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalGrossYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkTotalGross__c</formula>
        <label>Secondary Benchmark Total Gross YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalGross__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.TotalGross__c</formula>
        <label>Secondary Benchmark Total Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalNetME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkTotalNet__c</formula>
        <label>Secondary Benchmark Total Net ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalNetQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkTotalNet__c</formula>
        <label>Secondary Benchmark Total Net QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalNetYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkTotalNet__c</formula>
        <label>Secondary Benchmark Total Net YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkTotalNet__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.TotalNet__c</formula>
        <label>Secondary Benchmark Total Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmark__c</formula>
        <label>Secondary Benchmark YE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkYTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SecondaryBenchmarkYTD__c</formula>
        <label>Secondary Benchmark YTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkYTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SecondaryBenchmarkYTD__c</formula>
        <label>Secondary Benchmark YTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkYTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SecondaryBenchmarkYTD__c</formula>
        <label>Secondary Benchmark YTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmarkYTD__c</fullName>
        <formula>SecondaryBenchmarkPerformance__r.YTD__c</formula>
        <label>Secondary Benchmark YTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SecondaryBenchmark__c</fullName>
        <description>Name of the Secondary Benchmark</description>
        <label>Secondary Benchmark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareClassName__c</fullName>
        <formula>Product__r.ShareClassName__c</formula>
        <label>Share Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareClass__c</fullName>
        <formula>TEXT(Product__r.ShareClass__c)</formula>
        <label>Share Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharesOutstandingME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.SharesOutstanding__c</formula>
        <label>Shares Outstanding ME</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharesOutstandingQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.SharesOutstanding__c</formula>
        <label>Shares Outstanding QE</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharesOutstandingYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.SharesOutstanding__c</formula>
        <label>Shares Outstanding YE</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SharesOutstanding__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shares Outstanding</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceSystem__c</fullName>
        <label>Source System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundstation</fullName>
                </value>
                <value>
                    <fullName>Harris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TertiaryBenchmark10YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.TertiaryBenchmark10Year__c</formula>
        <label>Tertiary Benchmark 10 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TertiaryBenchmark10YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.TertiaryBenchmark10Year__c</formula>
        <label>Tertiary Benchmark 10 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
</CustomObject>